updates: * change login button color to grey * capitalize Reset Password fields * view docs with a new tab * align docs icon with text * use <a> tag with Change Password title * fix Change Password card spacing * add extra space between sections (top right dropdown) * remove cursor pointer on hover (user name) * update user name upon name change * update delete icon (api key mgmt, docker reg)

--- a/dash/frontend/src/app/modules/public/pages/login/login.component.scss
+++ b/dash/frontend/src/app/modules/public/pages/login/login.component.scss
@@ -1,3 +1,4 @@
+@use '@angular/material' as mat;
 div {
   &.login-container {
     display: flex;
@@ -32,6 +33,7 @@ div {
                 margin: 5px 0;
                 button{
                   width: 100%;
+                  background-color:  mat.get-color-from-palette(mat.$gray-palette, 300);
                 }
               }
               &.reset-password{
